@@ -1,3 +1,13 @@
+
+### March 5 2021, Release version 0.10.1 ###
+
+  * FIXED:
+    * fixed an issue with the update system.
+
+  * ADDED:
+    * logging messages have been added in the update system.
+
+
 ### March 5 2021, Release version 0.10.0 ###
 
   * ADDED:
